# esd2025

./: .gitignore  Cargo.toml  README
ball_detect/: A.py  B.py  Cargo.toml
ball_detect/src/: image_utils.rs  main.rs  test_yolo.rs
cam_test/: Cargo.toml  build.rs  config.toml  main.py  main_simple.py  main_v4l2.py  stream_simple.py
cam_test/src/: main.rs
camera/: Cargo.toml
camera/src/: main.rs
ros_test_A/: Cargo.toml
ros_test_A/src/: main.rs
ros_test_B/: Cargo.toml
ros_test_B/src/: main.rs
ros_wrapper/: Cargo.toml
ros_wrapper/src/: lib.rs  main.rs
servo_test/: Cargo.toml
servo_test/src/: main.rs
software_pwm/: Cargo.toml
software_pwm/src/: lib.rs
tracker/: Cargo.toml  main copy.py  main.py  main_no_laser.py
tracker/src/: main.rs
yolo/: dataset_template.yaml  main.py  pyproject.toml  train_roboflow.sh  train_roboflow_example.sh
