[package]
name = "ball_detect"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_yolo"
path = "src/test_yolo.rs"

[dependencies]
ros_wrapper = { path = "../ros_wrapper" }
ort = { version = "2.0.0-rc.10", features = [] }
image = "0.25"
ndarray = "0.16"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
eframe = "0.28"
egui = "0.28"
